Fix layout issue in blog
Changing the HTML tag from `p` to `time` on the date inside the blog section broke the layout due to the `time` tag being an inline element, whereas `p` tags are block elements.

Fixed the issue by adding the blog section to the flex container within the CSS.

--- a/index.css
+++ b/index.css
@@ -20,7 +20,8 @@ h1 {
 
 /* Flex Containers */
 
-.hero {
+.hero,
+.blog {
     display: flex;
     flex-direction: column;
     padding-left: 1.25em;
@@ -83,10 +84,21 @@ nav img {
 
 section > article.blog {
     padding: 1.25em;
+    gap: 0.563em;
 }
 
 article.blog > img {
     width: 100%;
     margin: 0 auto;
     display: block;
+}
+
+article.blog > time {
+    display: block;
+}
+
+/* Utility */
+
+.m0 {
+    margin: 0;
 }
